--- a/index_arquivos/index_arquivos/LINKS/1 - Copia.html
+++ b/index_arquivos/index_arquivos/LINKS/1 - Copia.html
@@ -11,7 +11,7 @@
 img {
     max-width: 100%;
 }
-</style><center><body bgcolor="#CCC"> </body>
+</style><body bgcolor="#CCC"> </body>
 <!--------------------------------
 <font color="#009427">&emsp;
 <!---------------------------------------------------------------------------------->
@@ -86,9 +86,9 @@ body {margin:0;}
 <!---------------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------------->
 <B>
-  <a href="index.html">INÍCIO</a>
-  <a href="index_arquivos/LINKS/1 - Copia.html">LINKS</a>
-  <a href="index_arquivos/DOWNLOADS/1 - Copia.html">DOWNLOADS</a>
+  <a href="../../index.html">VOLTAR</a>
+  <a href="../LINKS/1 - Copia.html">LINKS</a>
+  <a href="../DOWNLOADS/1 - Copia.html">DOWNLOADS</a>
 </B>
 <!---------------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------------->
@@ -138,11 +138,10 @@ body {margin:0;}
 }
 </style></head><body>
 <!---------------------FAIXA AZUL-- _blank --- _self ----------> 
-<a href="../../index.html" target="_self">
+<a href="../../../index.html" target="_self">
 <div height="100" style="background-color: #00FF00;line-height: 100px;text-align: center;"><p style="color: white"><FONT SIZE=+4>INÍCIO</FONT></p></div></a><CENTER><h1>
 MEUS LINKS
-</h1><h2>BEM-VINDO</h2>
-</CENTER>
+</h1><h2>BEM-VINDO</h2></CENTER>
 <!----------------------------------------------------------->
 <HR NOSHADE SIZE="8" color="#ffff00"><input type="text" id="myInput" onkeyup="myFunction()" placeholder="PESQUISA AQUI..." title="BUSCA"><ul id="myUL">
 <!----------------------------------------------------------------------------------------------------------->
@@ -152,63 +151,9 @@ MEUS LINKS
 <!----------------------------------------------------------------------------------------------------------->
 <!----------------------------------------------------------------------------------------------------------->
 <li><a target="_blank" href="
-VOLTAR AO TOPO.txt
+LINK🔴
 ">
-Veja o código de voltar ao topo.
-.</a></li>
-<!----------------------------------------------------------------------------------------------------------->
-<li><a target="_blank" href="
-https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_scroll_to_top
-">
-Veja o código de voltar ao topo (site w3schools).
-.</a></li>
-<!----------------------------------------------------------------------------------------------------------->
-<li><a target="_blank" href="
-https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_fixed_menu
-">
-Menu fixo (site w3schools).
-.</a></li>
-<!----------------------------------------------------------------------------------------------------------->
-<li><a target="_blank" href="
-https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_vertical_tabs
-">
-Menu vertical (site w3schools).
-.</a></li>
-<!----------------------------------------------------------------------------------------------------------->
-<li><a target="_blank" href="
-https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_hover_tabs
-">
-Menu vertical -I (site w3schools).
-.</a></li>
-<!----------------------------------------------------------------------------------------------------------->
-<li><a target="_blank" href="
-https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_hover_tabs
-">
-Menu vertical - II (site w3schools).
-.</a></li>
-<!----------------------------------------------------------------------------------------------------------->
-<li><a target="_blank" href="
-https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_accordion_symbol
-">
-Acordion (site w3schools).
-.</a></li>
-<!----------------------------------------------------------------------------------------------------------->
-<li><a target="_blank" href="
-https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_topnav
-">
-Navegador no topo (site w3schools).
-.</a></li>
-<!----------------------------------------------------------------------------------------------------------->
-<li><a target="_blank" href="
-https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_collapse_sidepanel
-">
-Collapsed Sidepanel (site w3schools).
-.</a></li>
-<!----------------------------------------------------------------------------------------------------------->
-<li><a target="_blank" href="
-https://www.w3schools.com/w3css/w3css_sidebar.asp
-">
-Menus laterais (site w3schools).
+NOME🔴
 .</a></li>
 <!----------------------------------------------------------------------------------------------------------->
 <li><a target="_blank" href="
@@ -217,6 +162,144 @@ LINK🔴
 NOME🔴
 .</a></li>
 <!----------------------------------------------------------------------------------------------------------->
+<li><a target="_blank" href="
+LINK🔴
+">
+NOME🔴
+.</a></li>
+<!----------------------------------------------------------------------------------------------------------->
+<li><a target="_blank" href="
+LINK🔴
+">
+NOME🔴
+.</a></li>
+<!----------------------------------------------------------------------------------------------------------->
+<li><a target="_blank" href="
+LINK🔴
+">
+NOME🔴
+.</a></li>
+<!----------------------------------------------------------------------------------------------------------->
+<li><a target="_blank" href="
+LINK🔴
+">
+NOME🔴
+.</a></li>
+<!----------------------------------------------------------------------------------------------------------->
+<li><a target="_blank" href="
+LINK🔴
+">
+NOME🔴
+.</a></li>
+<!----------------------------------------------------------------------------------------------------------->
+<li><a target="_blank" href="
+LINK🔴
+">
+NOME🔴
+.</a></li>
+<!----------------------------------------------------------------------------------------------------------->
+<li><a target="_blank" href="
+LINK🔴
+">
+NOME🔴
+.</a></li>
+<!----------------------------------------------------------------------------------------------------------->
+<li><a target="_blank" href="
+LINK🔴
+">
+NOME🔴
+.</a></li>
+<!----------------------------------------------------------------------------------------------------------->
+<li><a target="_blank" href="
+LINK🔴
+">
+NOME🔴
+.</a></li>
+<!----------------------------------------------------------------------------------------------------------->
+<li><a target="_blank" href="
+LINK🔴
+">
+NOME🔴
+.</a></li>
+<!----------------------------------------------------------------------------------------------------------->
+<li><a target="_blank" href="
+LINK🔴
+">
+NOME🔴
+.</a></li>
+<!----------------------------------------------------------------------------------------------------------->
+<li><a target="_blank" href="
+LINK🔴
+">
+NOME🔴
+.</a></li>
+<!----------------------------------------------------------------------------------------------------------->
+<li><a target="_blank" href="
+LINK🔴
+">
+NOME🔴
+.</a></li>
+<!----------------------------------------------------------------------------------------------------------->
+<li><a target="_blank" href="
+LINK🔴
+">
+NOME🔴
+.</a></li>
+<!----------------------------------------------------------------------------------------------------------->
+<li><a target="_blank" href="
+LINK🔴
+">
+NOME🔴
+.</a></li>
+<!----------------------------------------------------------------------------------------------------------->
+<li><a target="_blank" href="
+LINK🔴
+">
+NOME🔴
+.</a></li>
+<!----------------------------------------------------------------------------------------------------------->
+<li><a target="_blank" href="
+LINK🔴
+">
+NOME🔴
+.</a></li>
+<!----------------------------------------------------------------------------------------------------------->
+<li><a target="_blank" href="
+LINK🔴
+">
+NOME🔴
+.</a></li>
+<!----------------------------------------------------------------------------------------------------------->
+<li><a target="_blank" href="
+LINK🔴
+">
+NOME🔴
+.</a></li>
+<!----------------------------------------------------------------------------------------------------------->
+<li><a target="_blank" href="
+LINK🔴
+">
+NOME🔴
+.</a></li>
+<!----------------------------------------------------------------------------------------------------------->
+<li><a target="_blank" href="
+LINK🔴
+">
+NOME🔴
+.</a></li>
+<!----------------------------------------------------------------------------------------------------------->
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
