--- a/index_arquivos/index_arquivos/DOWNLOADS/1.html
+++ b/index_arquivos/index_arquivos/DOWNLOADS/1.html
@@ -11,7 +11,7 @@
 img {
     max-width: 100%;
 }
-</style><center><body bgcolor="#CCC"> </body>
+</style><body bgcolor="#CCC"> </body>
 <!--------------------------------
 <font color="#009427">&emsp;
 <!---------------------------------------------------------------------------------->
@@ -86,9 +86,9 @@ body {margin:0;}
 <!---------------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------------->
 <B>
-  <a href="index.html">INÍCIO</a>
-  <a href="index_arquivos/LINKS/1 - Copia.html">LINKS</a>
-  <a href="index_arquivos/DOWNLOADS/1 - Copia.html">DOWNLOADS</a>
+  <a href="../../index.html">VOLTAR</a>
+  <a href="../LINKS/1 - Copia.html">LINKS</a>
+  <a href="../DOWNLOADS/1 - Copia.html">DOWNLOADS</a>
 </B>
 <!---------------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------------->
@@ -138,7 +138,7 @@ body {margin:0;}
 }
 </style></head><body>
 <!---------------------FAIXA AZUL-- _blank --- _self ----------> 
-<a href="../../index.html" target="_self">
+<a href="../../../index.html" target="_self">
 <div height="100" style="background-color: #00FF00;line-height: 100px;text-align: center;"><p style="color: white"><FONT SIZE=+4>INÍCIO</FONT></p></div></a><CENTER><h1>
 MEUS LINKS
 </h1><h2>BEM-VINDO</h2>
