--- a/index_arquivos/FILMES/1 - Copia.html
+++ b/index_arquivos/FILMES/1 - Copia.html
@@ -29,7 +29,7 @@ https://www.w3schools.com/css/tryit.asp?filename=tryresponsive_image
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
 img {
-  max-height: 100%;
+  max-width: 100%;
   width: auto;
 }
 </style></head><body>
